force-app/main/default/objects/AccountPurpose__c/AccountPurpose__c.object-meta.xml
<CustomObject>
    <label>Account Purpose</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>AP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Purposes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>