force-app/main/default/objects/AccountPurpose__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <referenceTo>Purpose__c</referenceTo>
    <relationshipLabel>Purposes</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>