force-app/main/default/objects/AccountPurpose__c/fields/SitePurpose__c.field-meta.xml
<CustomField>
    <fullName>SitePurpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site's Purpose the account is related to</inlineHelpText>
    <label>Site Purpose</label>
    <referenceTo>AccountPurpose__c</referenceTo>
    <relationshipLabel>Center Purposes</relationshipLabel>
    <relationshipName>CenterPurposes</relationshipName>
    <type>Lookup</type>
</CustomField>